css/main.css
/*
--- FLEX SETUP ---
*/
.flx-align-center {
    display: flex;
    align-items: center;
}
.flx-spc-btw {
    justify-content: space-between;
}
.flx-spc-aron {
    justify-content: space-around;
}
/*
--- HEADER ---
*/
.header .container {
    width: 100%;
    background-color: #1B133A;
    height: 40px;
    border-top: 1px solid rgba(255, 255, 255, 0.8);
}
.header .container.top {
    border:none;
}
.header .container.navbar {
    height: 60px;
}
/*
--- Icons Box---
*/
.container.top .icons-box {
    width: 300px;
}
.icons-box i,
.user-icon i {
    color: #C99902;
    opacity: 0.8;
    font-size: 26px;
    cursor: pointer;
}
.icons-box i:hover,
.user-icon i:hover {
    opacity: 1;
    transform: scale(1.2);
    transition: 300ms;
}
/*
--- Language Box---
*/
.container.top .lang-user {
    width: 200px;
}
.container.top .language-box {
    width: 120px;
    border: 1px solid rgba(255, 255, 255, 0.8);
    border-radius: 20px;
}
.container.top .language-box,
.container.top .flag {
    padding: 2px 0;
    margin: 0 5px;
}
.container.top .language-select {
    color: #C99902;
}
/*
--- Logo Box---
*/
.header .container.logo-brands {
    height: 150px;
    justify-content: center;
}
.container .logo-brands {
    width: 80%;
}
/*
--- Brands Box---
*/
.container.logo-brands .logo-brands {
    width: 100%;
}
.container.logo-brands .brands-box {
    background-color: rgba(255, 255, 255, 0.4);
    border-radius: 15px 2px 15px 2px;
}
.container.logo-brands .brands-box img {
    padding: 5px;
}
/*
--- HEADER Navigation bar ---
*/
.container.navbar .navmenu {
    margin-left: 50px;
}
.container.navbar .navmenu a {
    color: #C99902;
    opacity: 0.8;
    padding: 12px;
    border-radius: 5px;
}
.container.navbar .navmenu a:first-child {
    opacity: 1;
    color: #fff;
    background-color: #c99902;
}
.container.navbar .navmenu a:hover {
    opacity: 1;
    color: #fff;
    background-color: #c99902;
    transition: 400ms;
}
.container.navbar .search-cart {
    width: 30%;
}
.container.navbar .search-bar {
    border: 1px solid rgba(255, 255, 255, 0.8);
    border-radius: 20px;
    padding: 5px;
}
.container.navbar .search-bar  input {
    font-size: 16px;
    padding: 0 10px;
    color: #C99902;
}
.container.navbar .search-bar i{
    color: rgba(255, 255, 255, 0.5);
    font-size: 20px;
    cursor: pointer;
}
.container.navbar .cart i {
    font-size: 30px;
    color: #C99902;
}
.cart-info {
    width: 20px;
    height: 20px;
    border-radius: 10px;
    background-color: rgb(243, 86, 86);
    color: #fff;
    font-size: 12px;
    justify-content: center;
}

